--- a/smartmet/engines/geonames.conf
+++ b/smartmet/engines/geonames.conf
@@ -31,7 +31,7 @@ database:
   host     = "smartmet-grid-postgresql-db";
   user     = "fminames_user";
   database = "fminames";
-  pass     = "CHAbruv6dRen";
+  pass     = "OmaHassuSalasana1234!";
 
   # For quick memory leak tests with valgrind:
   where:
