Things among other things.
And a lousy, no-good commit message

--- a/smartmet/libraries/tools-grid/filesys-to-smartmet.cfg
+++ b/smartmet/libraries/tools-grid/filesys-to-smartmet.cfg
@@ -53,11 +53,11 @@ filesys2smartmet :
     # that are not necessary used during the update.
     producerDefFile = "/etc/smartmet/libraries/tools-grid/producerDef.csv"
   
-    # Well blow me down! THere is no documentation for this array.
+    # Well blow me down! There is no documentation for this array.
     # I guess it is to define the directories which should be scanned 
     directories = 
     [
-      "/srv/data/2017"
+      "/srv/data"
     ]
 
     patterns = 
