--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,10 @@ services:
     build: 
       context: ./
       dockerfile: smartmet-server.Dockerfile
-    # container_name: smartmet-server
     container_name: smartmet-server
     volumes:
       - ./smartmet:/etc/smartmet
-      - ./data:/srv/data
+      - ../era5-data/:/srv/data
     environment:
       - SMARTMET_GRID_CONFIG_FILE=/etc/smartmet/libraries/grid-files/grid-files.conf
       - SMARTMET_ENV_FILE=/etc/smartmet/engines/grid-engine/base.conf
@@ -39,15 +38,18 @@ services:
     container_name: smartmet-grid-postgresql-db
     restart: "no"
     environment:
+      # This silly password needs to copied into ./smartmet/geonames.conf
       POSTGRES_PASSWORD: OmaHassuSalasana1234!
       POSTGRES_USER: fminames_user
       # POSTGRES_DB: fminames  
     ports:
-     - "5435:5432"
+      # Port exposed for connecting from host (not required in production)
+     - "5432:5432"
     volumes:
       # Keep database stuff stored on local file system
       - ./db:/var/lib/postgresql/data
 
+  # Redis is used for storing information for grib-data files
   redis_db:
     # From image...
     image: redis:latest
@@ -55,4 +57,5 @@ services:
     container_name: redis_content_server
     restart: always
     ports:
+      # Port exposed for connecting from host (not required in production)
       - "6379:6379"
