--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,9 @@ services:
       dockerfile: smartmet-server.Dockerfile
     container_name: smartmet-server
     volumes:
-      - ./smartmet:/etc/smartmet
-      - ../era5-data/:/srv/data
-      - ./scripts:/srv/scripts
+      - ./smartmet:/etc/smartmet:Z
+      - ../era5-data/:/srv/data:Z
+      - ./scripts:/srv/scripts:Z
     environment:
       # Settings for grib files are here
       - SMARTMET_GRID_CONFIG_FILE=/etc/smartmet/libraries/grid-files/grid-files.conf
@@ -51,7 +51,7 @@ services:
      - "5432:5432"
     volumes:
       # Keep database stuff stored on local file system
-      - ./db:/var/lib/postgresql/data
+      - ./db:/var/lib/postgresql/data:Z
 
   # Redis is used for storing information for grib-data files
   redis-db:
