--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     container_name: smartmet-server
     volumes:
       - ./smartmet:/etc/smartmet:Z
-      - /srv/era5-data/:/srv/data:ro
+      - /srv/era5-data/:/srv/data:Z
       - ./scripts:/srv/scripts:Z
     environment:
       # Settings for grib files are here
