Copy required data from S3 at start

--- a/cloudformation.template
+++ b/cloudformation.template
@@ -41,11 +41,11 @@ Description: >
 # aws cloudformation deploy --template-file wtf-template.yaml --stack-name my-new-stack --parameters ParameterKey=ERA5DataYear,ParameterValue=2017,ParameterKey=ERA5DataMonth,ParameterValue=1
 Parameters:
   ERA5DataYear:
-    Type: Number
+    Type: String
+    AllowedPattern: 201[0-8]
   ERA5DataMonth:
-    Type: Number
-    MinValue: 1
-    MaxValue: 12
+    Type: String
+    AllowedPattern: (0[1-9]|1[0-2])
 
 # Mappings:
 #   set of mappings
@@ -69,9 +69,20 @@ Resources:
           Value: smartmet-server-grid
       UserData:
         Fn::Base64:
-          !Sub |
-            #!/bin/bash -x
-            echo ${ERA5DataYear} - ${ERA5DataMonth} > ~/test.txt
+          Fn::Sub: |
+            #!/bin/bash
+
+            # Create a directory that is configured in SmartMet Server filesys-to-smartmet.cfg settings file
+            mkdir -p /srv/data
+
+            # Get data and rename to something ss understands
+            aws s3 cp s3://fmi-era5-world-nwp-parameters/${ERA5DataYear}/era5-${ERA5DataYear}${ERA5DataMonth}.grib /srv/data/ERA5_${ERA5DataYear}${ERA5DataMonth}00000000_era5.grib
+            aws s3 cp s3://fmi-era5-world-nwp-parameters/${ERA5DataYear}/era5-preprocessed-${ERA5DataYear}${ERA5DataMonth}.grib2 /srv/data/ERA5_${ERA5DataYear}${ERA5DataMonth}00000000_era5-preprocessed.grib2
+
+            # Allow normal user to access data
+            chown -R centos:centos /srv/data 
+
+
     # Metadata:
     #   # To link metadata to certain resource, place the config nested here
     #   # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/metadata-section-structure.html
