--- a/cloudformation.template
+++ b/cloudformation.template
@@ -6,7 +6,7 @@ Description: >
   details about
   the template.
 
-# For an example
+# For an example to setup SmartMet Server with ERA5 data for January 2017:
 # aws cloudformation deploy --template-file wtf-template.yaml --stack-name my-new-stack --parameters ParameterKey=ERA5DataYear,ParameterValue=2017,ParameterKey=ERA5DataMonth,ParameterValue=1
 Parameters:
   ERA5DataYear:
