Disable cache and enable configuration polling

--- a/smartmet/plugins/wfs.conf
+++ b/smartmet/plugins/wfs.conf
@@ -6,10 +6,11 @@ storedQueryRestrictions = true;
 storedQueryConfigDirs = ["wfs/stored_queries"];
 storedQueryTemplateDir = "/etc/smartmet/plugins/wfs/templates";
 xmlGrammarPoolDump = "/etc/smartmet/plugins/wfs/XMLGrammarPool.dump";
-cacheSize = 1000;
-cacheTimeConstant = 60;
+cacheSize = 0;
+cacheTimeConstant = 0;
 validateXmlOutput = false;
 enableDemoQueries = false;
+enableConfigurationPolling = true;
 featuresDir = "wfs/features";
 
 serializedXmlSchemas = "/etc/smartmet/plugins/wfs/XMLSchemas.cache";
