--- a/contouring/Dockerfile
+++ b/contouring/Dockerfile
@@ -8,9 +8,9 @@ FROM python:3.7.4-alpine3.10
 WORKDIR /usr/src/app
 
 
-COPY requirements.txt ./
+COPY ./app/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# COPY . .
 
-#CMD [ "python", "./main.py" ]
+# CMD [ "python", "./main.py" ]
