[SOL-7918] Add stored queries
Separate stored query files for contouring  winds and pressure.
This is because parameter cannot be overwritten in the request.

Default limits for parameter values for contouring are as defined in
Jira, but the values are overwritable if necessary.

--- a/smartmet-server/config/plugins/wfs/stored_queries/pressurecoverage.conf
+++ b/smartmet-server/config/plugins/wfs/stored_queries/pressurecoverage.conf
@@ -1,6 +1,6 @@
 # Stuff to contour storm objects with
 
-id = "Storm";
+id = "pressurecoverage";
 expiresSeconds = 1;
 constructor_name = "wfs_coverage_query_handler_factory";
 template = "coverage_countours.c2t";
@@ -15,7 +15,6 @@ abstract: {
    eng = "Weather parameter forecast for an area returned in GML-contours. Contours are polygons. Area can be specified as bbox parameter. Copied from fmi::forecast::copernicus::marine::arctic::surface::coverage::icethickness";
    fin = "Sääparametrin ennuste alueelle palautettuna GML-konttuureina. Haluttu alue voidaan määrittää bounding boxina (bbox). Tuloksena saatavat kontuurit ovat polygoneja."
 };
-
 
 parameters: (
 {
@@ -145,8 +144,9 @@ parameters: (
 
 named_params = (
 {
-    name = "defaultLimits";
-    def = [0.0,15.0];
+    name = "defaultContourParamLimits";
+    # For stormy days search for pressure of 1000 hPa or lower
+    def = [0.0,1000.0];
 }
 );
 
@@ -171,12 +171,13 @@ handler_params:{
     startStep="${}";
     crs = "${crs:EPSG::4326}";
     timeZone = "${timezone:UTC}";
-    # limits = ["${limits > defaultLimits}"];
+    limits = ["${limits > defaultContourParamLimits}"];
 };
 
 contour_param: {
-    name = "WindGust";
-    unit = "ms";
-    id = 417;
-    limits = [0.0,50.0];
+    name = "Pressure";
+    unit = "hPa";   
+    id = 1;
+    # limits-parameter is defined in handler_params and 
+    # its default value in named_params
 };
