[SOL-7919] Make a mess of a packaging
Trying to figure out how in the world this all should come together. It
seems that there is no definitive consensus over how to organise the
packages and projects and what tools to use.

Trying to follow one best-practices guide here, but even that doesn't
discuss using Docker with development.

We shall see how it all turns out.

--- a/contouring/Dockerfile
+++ b/contouring/Dockerfile
@@ -8,8 +8,12 @@ FROM python:3.7.4-alpine3.10
 WORKDIR /usr/src/app
 
 # To 
-COPY ./app ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY ./ ./
+
+RUN pip install .
+
+# Perhaps move requiremets to setup.py?
+# RUN pip install --no-cache-dir -r requirements.txt
 
 # TODO: Figure this thing out
 # CMD [ "./bin/contouring" ]
