Use same container for prodution and development
Reduce the possibility of having things working differently in
development and production. Use separate development requirements in
setup.py to only install pytest and pylint when developing.

--- a/contouring/Dockerfile
+++ b/contouring/Dockerfile
@@ -26,7 +26,7 @@ RUN mkdir -p ${mydir}
 WORKDIR ${mydir}
 
 # Copy required files incrementally and tests
-COPY --chown=anaconda:anaconda setup.py .
+COPY --chown=anaconda:anaconda setup.py setup.py
 COPY --chown=anaconda:anaconda src src
 COPY --chown=anaconda:anaconda tests tests
 
