--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,14 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or the definition README at
 // https://github.com/microsoft/vscode-dev-containers/tree/master/containers/python-3-miniconda
 {
-	"name": "Python 3 - Miniconda",
-	"context": "..",
-	"dockerFile": "Dockerfile",
+	"name": "Python 3 - Miniconda testi",
+	"context": "../contouring",
+	"dockerFile": "../contouring/Dockerfile",
 
 	// Use 'settings' to set *default* container specific settings.json values on container create. 
 	// You can edit these settings after create using File > Preferences > Settings > Remote.
 	"settings": { 
-		"terminal.integrated.shell.linux": "/bin/bash",
+		"terminal.integrated.shell.linux": "/bin/sh",
 		"python.pythonPath": "/opt/conda/bin/python",
 		"python.linting.enabled": true,
 		"python.linting.pylintEnabled": true,
@@ -19,13 +19,12 @@
 	// "appPort": [],
 
 	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "python --version",
-	"postCreateCommand": "pip install -e contouring/.",
+	"postCreateCommand": "pip install -e contouring[dev]",
 
 	// Uncomment the next line to use a non-root user. On Linux, this will prevent
 	// new files getting created as root, but you may need to update the USER_UID
 	// and USER_GID in .devcontainer/Dockerfile to match your user if not 1000.
-	// "runArgs": [ "-u", "vscode" ],
+	"runArgs": [ "--network", "sasse-era5-smartmet-grid_default" ],
 
 	// Add the IDs of extensions you want installed when the container is created in the array below.
 	"extensions": [
