--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       - REDIS_CONTENT_SERVER_PORT=6379
       # This is just some random prefix. Not sure if absolutely required
       - REDIS_CONTENT_SERVER_TABLE_PREFIX=a.
-      # The password is only required for the entrypoint script
+      # The password is only required for the entrypoint script (see below)
       # Wouldn't it be nice to store this some where else.
       - POSTGRES_PASSWORD=OmaHassuSalasana1234!
     ports:
