--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,28 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Test app",
+            "type": "python",
+            "request": "launch",
+            "program": "/usr/local/bin/contour_storm",
+            "console": "integratedTerminal",
+            "args": [
+                "--verbose", 
+                "--starttime", "2017-08-01T00:00:00",
+                "--url", "http://smartmet-server:8080/wfs",
+                "--storedquery_id", "windgustcoverage",
+                "--limits", "10,15"
+            ],
+            "justMyCode": false,
         },
         {
             "name": "Debug Tests",
