Use database settings from environment
Not really sure if this is a good idea, or should the settings be passed
from cloudformation template, but for developing it's fine.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,10 @@
     // Use the same network as smartmet-server and other containers started by
     // docker-compose. This way we have access to smartmet-servers wfs-interface
     // from development container
-	"runArgs": [ "--network", "sasse-era5-smartmet-grid_default" ],
+    "runArgs": [
+        "--network", "sasse-era5-smartmet-grid_default",
+        "--env-file", ".env"
+    ],
 
 	// Add the IDs of extensions you want installed when the container is created in the array below.
 	"extensions": [
