--- a/cloudformation.template
+++ b/cloudformation.template
@@ -44,6 +44,14 @@ Resources:
             # Allow normal user to access data
             chown -R centos:centos /srv/data
 
-            # Run filesys2smartmet-thingy, maybe as root, maybe as smartmet user. Who knows.
-            # The docker image has to be running in order for this to work
-            # docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /etc/smartmet/libraries/tools-grid/filesys-to-smartmet.cfg 0
+            # THE SMARTMET-SERVER DOCKER IMAGE HAS TO BE RUNNING IN ORDER FOR THE NEXT STEPS TO WORK
+            # CHECK THAT THE AMI HAS DOCKER CONTAINERS RUNNING ON START
+            # Run filesys2smartmet-thingy, as smartmet user, because unknown reasons
+            docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /etc/smartmet/libraries/tools-grid/filesys-to-smartmet.cfg 0
+
+            # There is a wait time for filesys2smartmet changes to be visible in smartmet-server
+            sleep 120
+
+            # THEN when the data is ready start the contouring commands
+            docker run --rm --env-file .env --network sasse-era5-smartmet-grid_default contouring contour_storm --verbose --year ${ERA5DataYear} --month ${ERA5DataMonth} --url http://smartmet-server:8080/wfs  --storedquery_id windgustcoverage --limits 15,999,20,999,25,999,30,999
+            # docker run --rm --env-file .env --network sasse-era5-smartmet-grid_default contouring contour_storm --year ${ERA5DataYear} --month ${ERA5DataMonth} --url http://smartmet-server:8080/wfs  --storedquery_id pressurecoverage --limits 0,1000
